--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ serde_json = "1.0.39"
 log = "0.4.6"
 env_logger = "0.6.1"
 sled = "0.34.6"
+crossbeam = "0.7.1"
+rayon = "1.0.3"
+num_cpus = "1.10.0"
+crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
 
 [dev-dependencies]
 assert_cmd = "0.11"
